# mdsplus_avaspec

./: CMakeLists.txt  avaspec.cpp  avaspec.hpp  avaspec__add.fun  avaspec__init.fun  avaspec__load_image.fun  avaspec__part_name.fun  avaspec__store.fun  avaspec_raw.cpp  avaspecd.cc  debug.hpp  end_glow.csv  error.cpp  error.hpp  glow.csv  gnuplot.hpp  gnuplot_i.cpp  gnuplot_i.hpp  ieee754.h  libavaspec.cpp  libavaspec.h  main.cpp  sstr.hpp  testlib.c  time.cpp  time.hpp
avaspec.xcodeproj/: garnier.mode1  garnier.pbxuser  project.pbxproj
